Wed Feb 16 16:01:42 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Corrected the use of Wait Sets and Status Conditions.
          The key change is that the condition must be checked before waiting.

Wed Feb 16 15:39:45 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Delegate.cpp:
        * tools/modeling/codegen/model/Sync.cpp:

          Removed trailing spaces so that fuzz doesn't slam the build.

Wed Feb 16 15:19:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.main/plugin.xml:

          Define the Category for the New Wizards.

        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Generator/SdkGeneratorFactory.java:

          Fix for refreshing dirs with absolute paths (from the Eclipse
          workspace).

Wed Feb 16 00:15:41 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

          [r4330] 2011-02-16 00:13  martinezm
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/CustomizationTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/DeploymentTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/GeneratorTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/TreeViewerDelegate.java:

          Added a progress monitor, notifications to the status bar, and moved
          code generation to a different thread. Updated some of the selection